
2007-11-08
- util/memmove.S include/string.h: Removed the deprecated and unused function
  bcopy. (THH)
- util/stringasm.S: Patched strchr() for GCC 4.2. (THH)
- vdi/vdi_control.c: Now using memset() in v_clrwk() to clear the screen - this
  is hopefully a little bit faster than the former dumb loop. (THH)

2007-11-15
- aes/geminit.c aes/gemshlib.* aes/gemstart.S desk/desk_rsc.c desk/deskmain.c:
  Added the possibility to change the resolution between ST-low and ST-medium
  resolution (highly experimental!). (THH)

2007-11-19
- vdi/vdi_col.c: Palette is now initialized during v_opnwk() and added color
  mapping for 4 color mode (ST medium resolution). (THH)
- util/nlsasm.S util/stringasm.S: Removed A0-return-value hacks since there
  is a version of of GCC 4.2 (ported by Olivier Landemarre) which does not
  suffer from this annoying A0 "bug". (THH)
- desk/desk_rsc.c: Disable menu entry for changing resolution again - it is
  still way too incomplete for the public. (THH)

2008-01-05
- bios/screen.c: Since we only support VGA resolutions by now, toggle the
  double-scan bit in vsetmode when a RGB mode is requested. (THH)
- include/asm.h util/miscasm.S: Changed macros for swapping the endianess of
  a variable to use inline assembler - that's faster and less code. (THH)

2008-01-06
- include/config.h: STOP instruction will now be used by default when a
  TOS version >= 2.00 is compiled. (THH)
- bios/clock.c: Got rid of RTC_TOS_VER - the year offset in the NVRAM is now
  autodetected. (THH)
- vdi/vdi_mouse.c: Fixed off-by-one bug in VDI mouse driver. (THH)

2008-01-21
- include/biosbind.h bdos/fs.h: Added support for the extended Rwabs call,
  with lrecno parameter. (THH)

2008-02-07
- bdos/time.c bios/clock.c: Cleaned up and fixed BIOS and GEMDOS time and
  date functions, IKBD clock basically works now, too. (THH)

* Release: 0.8.3

2008-03-26
- bios/clock.c: EmuTOS did not work on STonX anymore due to a bug in the RTC
  detection. (THH)